[package]
name = "pnetlink"
version = "0.0.2"
authors = ["Alexander Polakov <plhk@sdf.org>"]
build = "build.rs"
description = "Netlink library in pure rust"
repository = "https://github.com/polachok/pnetlink"
readme = "README.md"
keywords = ["netlink", "pnet", "linux", "network"]
license = "MIT"
documentation = "https://docs.rs/pnetlink/0.0.2/pnetlink/"

[build-dependencies.pnet_macros]
version = ">=0.13"
features = [ "with-syntex" ]

[dependencies.pnet_macros_support]
version = ">=0.1.1"

[dependencies.pnet]
version = ">=0.16"
features = [ "with-syntex" ]

[build-dependencies.syntex]
version = "0.42"

[dependencies]
libc = "0.2"

[dependencies]
rand = ">=0.3.14"
bitflags = "0.7"
byteorder = ">=0.5.3"
