[package]
name = "pnetlink"
version = "0.0.2"
authors = ["Alexander Polakov <plhk@sdf.org>"]
build = "build.rs"
description = "Netlink library in pure rust"
repository = "https://github.com/polachok/pnetlink"
readme = "README.md"
keywords = ["netlink", "pnet", "linux", "network"]
license = "MIT"
documentation = "https://docs.rs/pnetlink/"

[dependencies]
rand = "0.3.14"
bitflags = "0.7"
byteorder = "0.5.3"
libc = "0.2"
pnet = "0.20"
pnet_macros_support = "0.20"

[build-dependencies]
pnet_macros = "0.20"
syntex = "0.42"