[package]
name = "pnetlink"
version = "0.0.3"
authors = ["Alexander Polakov <plhk@sdf.org>"]
build = "build.rs"
description = "Netlink library in pure rust"
repository = "https://github.com/polachok/pnetlink"
readme = "README.md"
keywords = ["netlink", "pnet", "linux", "network"]
license = "MIT"
documentation = "https://docs.rs/pnetlink/"

[dependencies]
rand = "0.4"
bitflags = "1"
byteorder = "1"
bytes = "0.4"
futures = "0.1"
libc = "0.2"
mio = "0.6"
pnet = "0.21"
pnet_macros_support = "0.21"
tokio-core = "0.1"
tokio-io = "0.1"

[build-dependencies]
pnet_macros = "0.21"
syntex = "0.42"
